# biryani-battery-reminder

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Inno-Setup.iss  LICENSE.txt  README.md  build.py  gui.py  main.py  profile.out  pyproject.toml  requirements.txt  settings.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: README.md  bug_report.md  feature_request.md
battery_reminder/: __main__.py
battery_reminder/src/: __init__.py  app_config_manager.py  assets_manager.py  background_proc.py  config.py  gui.py  logger_config.py  notifier.py  powerplan.py  settings_gui.py  startup_manager.py  test_background_proc.py  utils.py
tests/: test_bg_proc.py  test_gui.py
website/: index.html  package.json  pnpm-lock.yaml  script.js  styles.css
website/src/app/: page.tsx
