[project]
name = "birayni-battery-reminder"
version = "0.1.0"
description = "Birayni - The Battery Reminder App. Reminds when the battery charge is 100% or too low with a fun notification and ui."
authors = [{ name = "Tejas", email = "tejas.sunil.75o25@gmail.com" }]
requires-python = ">=3.13,<3.14"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "desktop-notifier (>=6.1.1,<7.0.0)",
    "batteryinfo (>=0.1.5,<0.2.0)",
    "pystray (>=0.19.5,<0.20.0)",
    "ttkbootstrap (>=1.13.10,<2.0.0)",
    "pillow (>=10,<11)",
    "rich (>=14.0.0,<15.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "cx-freeze (>=8.3.0,<9.0.0)",
    "nava (>=0.7,<0.8)",
]

[project.optional-dependencies]
windows = ["pywin32 (>=310,<311)"]

[dependency-groups]
dev = [
    "ruff>=0.11.12,<0.12",
    "pyright>=1.1.401,<2",
    "pyrefly>=0.17.1,<0.18",
    "pyinstaller>=6.14.1,<7",
    "snakeviz>=2.2.2,<3",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["battery_reminder"]
module-root = ""
source-include = ["emojis/**.png"]

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"
